# src/models/user.model.ts
@@ -1,4 +1,11 @@
-import { Column, Entity, OneToMany, PrimaryGeneratedColumn } from 'typeorm';
+import {
+	Column,
+	CreateDateColumn,
+	Entity,
+	OneToMany,
+	PrimaryGeneratedColumn,
+	UpdateDateColumn,
+} from 'typeorm';
 import { Article } from './article.model';
 import { Comment } from './comment.model';
 
@@ -18,4 +25,10 @@ export class User {
 
 	@OneToMany(() => Comment, comment => comment.user)
 	comments: Comment[];
+
+	@CreateDateColumn()
+	createdAt: Date;
+
+	@UpdateDateColumn()
+	updatedAt: Date;
 }
